# todo_next_axum

./: README.md  setup.sh
todo_axum/: Cargo.toml  README.md  todos.db  todos.db-shm  todos.db-wal
todo_axum/migrations/: 20241130134702_create_todos_table.sql
todo_axum/src/: app.rs  cors.rs  init_db.rs  main.rs  router_builder.rs
todo_axum/src/handlers/: todo.rs
todo_axum/src/models/: todo.rs
todo_next/: next.config.ts  package.json  pnpm-lock.yaml
todo_next/app/: page.tsx
todo_next/components/: TodoForm.tsx  TodoItem.tsx  TodoList.tsx
todo_next/contexts/: TodosContext.tsx
todo_next/lib/: axum_api.ts  todo_api.ts
todo_next/lib/validations/: todo.ts
todo_next/types/: todo_types.ts
