[package]
name = "todo_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tower-http = { version = "0.5", features = ["cors","fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
http = "1.2.0"
tower = "0.5.1"
hyper = "1.5.1"
anyhow = "1.0.94"
